--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8",
+    "supabase": "^2.39.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
